# delta-exchange

./: .gitignore  README.md
analysis/: databento_replay.py  empirical_analysis.py  latency_slippage_test.py  paper2_panel_regression.py  queue_fill_quality.py  queue_info_full.py  queue_regression.py
analysis/paper2/: README.md  paper2_full_20stocks.py  paper2_robustness.py  queue_fill_probability.py  queue_information_test.py
analysis/paper3/: README.md  paper3_liberation_day.py  paper3_spread_depth.py
binance-replay/: Cargo.toml  SESSION_NOTES.md  final_analysis.sql  patch_throttle.py  patch_throttle_fix.py
binance-replay/src/: book.rs  fair_value.rs  main.rs  queue_mechanisms.rs  types.rs
config/: exchange.toml
dual-engine/: Cargo.toml
dual-engine/src/: fba.rs  main.rs  queue_mechanisms.rs
engine/: Cargo.toml
engine/src/: main.rs  queue_mechanisms.rs
frontend/: index.html
lobster-replay/: Cargo.toml
lobster-replay/src/: main.rs
research/: analyze.sql  export.sh
simulator/: Cargo.toml
simulator/src/: main.rs
