[package]
name = "delta-binance-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
csv = "1.3"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
