[package]
name = "delta-lobster-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal"] }

[profile.release]
opt-level = 3
strip = true
